# apex-backtest

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
.planning/phases/17-multi-asset/: PLAN-17A.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  v2.0-SUMMARY.md  v3.0-ARCHITECTURE.md  v3.0-FEATURES.md  v3.0-PITFALLS.md  v4.0-journal.md  v4.0-optuna.md  v4.0-strategy-builder.md
src/: analytics.py  benchmark.py  data_handler.py  engine.py  event_queue.py  events.py  execution.py  metrics.py  multi_asset.py  portfolio.py  portfolio_router.py  report.py  risk_manager.py
src/dashboard/: __main__.py  app.py  callbacks.py  layouts.py
src/journal/: __init__.py  models.py  store.py  trade_builder.py
src/optimization/: __init__.py  monte_carlo.py  robustness.py  sensitivity.py  walk_forward.py
src/strategy/: base.py  breakout.py  fvg.py  reversal.py
templates/: report.html
tests/: test_analytics.py  test_causality.py  test_coverage_boost.py  test_dashboard.py  test_dashboard_integration.py  test_data_handler.py  test_engine.py  test_events.py  test_execution.py  test_ict.py  test_journal.py  test_journal_store.py  test_metrics.py  test_multi_asset.py  test_optimization.py  test_portfolio.py  test_portfolio_enhancement.py  test_regime.py  test_report.py  test_risk_manager.py  test_smc.py  test_strategy.py
(+54 files in other folders)
