[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "apex-backtest"
version = "0.1.0"
requires-python = ">=3.12"
description = "Event-driven backtesting engine with Dash dashboard"
dependencies = [
    "pandas==2.2.3",
    "numpy>=1.26",
    "yfinance>=0.2",
    "alpha_vantage>=2.3",
    "pandas-ta>=0.3",
    "dash>=2.17",
    "plotly>=5.22",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
